--- a/index4.html
+++ b/index4.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="index.html">Exercice 1</a></li>
                 <li><a href="index2.html">Exercice 2</a></li>
-                <li><a href="index3.html">Exercice 3</a></li>
+                <li><a href="index3.php">Exercice 3</a></li>
                 <li><a href="index4.html">Exercice 4</a></li>
             </ul> 
         </nav>
@@ -26,16 +26,16 @@
         <form method="post" action="choose.php">
             <p> Choisis la table que tu veux réviser</p>
             <select name="tables">
-                <option value="1">table de 1</option>
-                <option value="2">table de 2</option>
-                <option value="3">table de 3</option>
-                <option value="4">table de 4</option>
-                <option value="5">table de 5</option>
-                <option value="6">table de 6</option>
-                <option value="7">table de 7</option>
-                <option value="8">table de 8</option>
-                <option value="9">table de 9</option>
-                <option value="10">table de 10</option>
+                <option class="listed" value="1">Table de 1</option>
+                <option class="listed" value="2">Table de 2</option>
+                <option class="listed" value="3">Table de 3</option>
+                <option class="listed" value="4">Table de 4</option>
+                <option class="listed" value="5">Table de 5</option>
+                <option class="listed" value="6">Table de 6</option>
+                <option class="listed" value="7">Table de 7</option>
+                <option class="listed" value="8">Table de 8</option>
+                <option class="listed" value="9">Table de 9</option>
+                <option class="listed" value="10">Table de 10</option>
             </select>
             <textarea id="reponse"></textarea>
             <input type="reset" value="Annuler"></input>
