Mouture fin de semaine

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 <option class="listed" value="10">Table de 10</option>
             </select>
             <div>
-                <input type="reset" value="Annuler"></input>
-                <input type="submit" value="Voir la table"></input>
+                <input class="button" type="reset" value="Annuler"></input>
+                <input class="button" type="submit" value="Voir la table"></input>
             </div>
             
         </form>
