--- a/index4.html
+++ b/index4.html
@@ -38,8 +38,8 @@
                 <option class="listed" value="10">Table de 10</option>
             </select>
             <textarea id="reponse"></textarea>
-            <input type="reset" value="Annuler"></input>
-            <input type="submit" value="Valider ma réponse"></input>
+            <input class="button btn4" type="reset" value="Annuler"></input>
+            <input class="button" type="submit" value="Valider ma réponse"></input>
         </form>
     </section>
 
