--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="index.html">Exercice 1</a></li>
                 <li><a href="index2.html">Exercice 2</a></li>
-                <li><a href="index3.html">Exercice 3</a></li>
+                <li><a href="index3.php">Exercice 3</a></li>
                 <li><a href="index4.html">Exercice 4</a></li>
             </ul> 
         </nav>
@@ -35,8 +35,8 @@
             <input type="checkbox" name="case[]" value="8"/>table de 8<br/>
             <input type="checkbox" name="case[]" value="9"/>table de 9<br/>
             <input type="checkbox" name="case[]" value="10"/>table de 10<br/>
-            <input type="reset" value="Annuler"></input>
-            <input type="submit" name="voir" value="voir"></input>
+            <input class="button btn2" type="reset" value="Annuler"></input>
+            <input class="button btn2" type="submit" name="voir" value="voir"></input>
         </form>
     </section>
 
